--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -23,6 +23,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: "Oswald", sans-serif;
+    background-color: var(--background-color);
 }
 
 .empty{
