--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: "Oswald", sans-serif;
-    /* background-color: var(--background-color); */
+    background-color: var(--background-color);
 }
 
 .empty{
