--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap')
+;
+
 
 :root{
   --color-button-principal: linear-gradient(341deg, rgba(141,37,149,1) 12%, rgba(245,107,47,1) 100%);
   --color-button-principal-hover:  linear-gradient(341deg, #6f1d75 12%, #bf5223 100%);
   --background-color: #171122;
   --background-color-cards: #231A32;
-  --background-color-cards-button: #302447
+  --background-color-cards-button: #302447;
   --padding-button-big: 15px 60px;
   --padding-ancla-menu: 7px 16px;
   --main-color-text: #fff;
   --secon-color-text: #000;
   --third-color: rgb(141,37,149);
-  --size-animation-range-banner: 56.04vw;
+  --size-animation-range-banner: 56.0vw;
   --font-size-p: 16px;
-  --font-size-h1: 30px;
-  --font-size-h2: 26px;
-  --font-size-h3: 22px;
+  --font-size-h1: 48px;
+  --font-size-h2: 40px;
+  --font-size-h3: 30px;
   --font-size-h4: 19px;
 }
 
@@ -26,10 +28,10 @@ body{
     background-color: var(--background-color);
 }
 
-.empty{
-    height: 2000px;
-    background: linear-gradient(0deg, rgba(23,17,34,1) 82%, rgba(0,0,0,1) 100%);
-    z-index: 999;
-    position: relative;
+h3{
+  color: var(--main-color-text);
+  text-align: center;
+  font-size: var(--font-size-h3);
+  margin: 60px 0;
 }
 
